Add recipe page content and a img source folder
Content was added to the initial recipe page, chicken tortilla soup.
Also added an img src folder

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>My Favorite Instant Pot Recipes</h1>
     <br>
-    <a href="./recipes/chicken-tortilla-soup.html" rel="noreferrer">Chicken Tortilla Soup</a>
+    <h2>Chicken Tortilla Soup</h2>
+    <a href="./recipes/chicken-tortilla-soup.html"> <!--wrapped the img in an a tag so the img would link to the recipe instead of the title-->
+        <img src="./img/chicken-tortilla-soup.webp">
+    </a>
     <br>
 </body>
 </html>
