--- a/recipes/chicken-tortilla-soup.html
+++ b/recipes/chicken-tortilla-soup.html
@@ -6,6 +6,38 @@
     <title>[Instant Pot] Chicken Tortilla Soup</title>
 </head>
 <body>
-    <h1>Chicken Tortilla Soup</h1>
+    <h1>[Instant Pot] Chicken Tortilla Soup</h1>
+    <img src="../img/chicken-tortilla-soup.webp">
+    <h2>Description</h2>
+    <p>Delicious Chicken Tortilla Soup recipe optimized for ease of use with an Instant Pot.</p>
+    <p>Chicken Tortilla Soup was the first recipe I learned with my Instant Pot and is still one of my favorites.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2tsp Olive Oil</li>
+        <li>1 cup chpped onion</li>
+        <li>4 cloves garlic minced</li>
+        <li>4oz can mild fire roasted diced green chiles</li>
+        <li>14.5oz can fire raosted diced tomatoes</li>
+        <li>15oz red enchilada sauce</li>
+        <li>1-2tsp chili powder</li>
+        <li>1tsp cumin</li>
+        <li>15oz can black beans <em>drained</em></li>
+        <li>4 cups low sodium chicken broth</li>
+        <li>1 pound boneless skinless chicken breast</li>
+        <li>1 cup canned corn</li>
+        <li>salt and pepper to taste <em>or 1/2tsp each</em></li>
+    </ul>
+    <ol>
+        <li>Add olive oil to Instant Pot insert and turn on saute function. Add the onion and cook, stirring, until softened, about 3 minutes. Turn off Instant Pot. Stir in the minced garlic.</li>
+        <li>Add the diced green chiles, fire roasted diced tomatoes, enchilada sauce, chili powder, cumin, black beans and chicken broth. Stir well, scraping up any bits stuck to the bottom of the pot. Nestle the chicken into the liquid.</li>
+        <li>Place the lid on and set it to the closed position. Move the steam valve to the sealing position.</li>
+        <li>Set the Instant Pot to manual/pressure cook, high pressure, for 9 minutes. The Instant Pot will take about 20 minutes to reach pressure and then the cook time will start counting down. When the cook time is done, allow the pressure to release naturally for 10 minutes (this means just leave the Instant Pot alone for 10 minutes). Then, carefully move the steam valve to the venting position to release the remaining pressure. I usually do this with the handle of a long spoon.</li>
+        <li>When the float valve drops down, the pressure has been released and it is safe to open your instant pot. Carefully remove the lid. Remove the chicken to a clean plate and let it rest for a few minutes.</li>
+        <li>Stir the corn into the Instant Pot, cover and let it sit for 5 minutes. Meanwhile, shred the chicken.</li>
+        <li>Return the shredded chicken back to the pot. Season soup to taste with salt and pepper. Serve with toppings as desired.</li>
+    </ol>
+    <br> <!--added break lines for basic formatting-->
+    <p>And there we have it Chicken Tortilla Soup</p>
+    <br>
 </body>
 </html>
