Add more recipe pages, content, and img sources
Using the same format as previous, I added two more pages.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@
 <body>
     <h1>My Favorite Instant Pot Recipes</h1>
     <br>
+    <ul>
+        <li>
     <h2>Chicken Tortilla Soup</h2>
     <a href="./recipes/chicken-tortilla-soup.html"> <!--wrapped the img in an a tag so the img would link to the recipe instead of the title-->
         <img src="./img/chicken-tortilla-soup.webp">
     </a>
     <br>
+    </li>
+    <li>
+        <h2>Butter Chicken</h2>
+        <a href="./recipes/butter-chicken.html"> <!--wrapped the img in an a tag so the img would link to the recipe instead of the title-->
+            <img src="./img/butter-chicken.jpg" height="248" width="344">
+        </a>
+        <br>
+        </li>
+        <li>
+            <h2>Beef Stew</h2>
+            <a href="./recipes/beef-stew.html"> <!--wrapped the img in an a tag so the img would link to the recipe instead of the title-->
+                <img src="./img/beef-stew.jpg" height="248" width="344">
+            </a>
+            <br>
+            </li>
+    </ul>
 </body>
 </html>
