--- a/recipes/chicken-tortilla-soup.html
+++ b/recipes/chicken-tortilla-soup.html
@@ -27,6 +27,7 @@
         <li>1 cup canned corn</li>
         <li>salt and pepper to taste <em>or 1/2tsp each</em></li>
     </ul>
+    <h2>Instructions</h2>
     <ol>
         <li>Add olive oil to Instant Pot insert and turn on saute function. Add the onion and cook, stirring, until softened, about 3 minutes. Turn off Instant Pot. Stir in the minced garlic.</li>
         <li>Add the diced green chiles, fire roasted diced tomatoes, enchilada sauce, chili powder, cumin, black beans and chicken broth. Stir well, scraping up any bits stuck to the bottom of the pot. Nestle the chicken into the liquid.</li>
